[gd_scene load_steps=6 format=3 uid="uid://bl0y08s1r301x"]

[ext_resource type="Script" path="res://scenes/buildings/MainBuilding.gd" id="1_s4e7a"]
[ext_resource type="Texture2D" uid="uid://cbrf0o48jm3ta" path="res://resources/ant-hill.png" id="2_5fydr"]
[ext_resource type="PackedScene" uid="uid://b3jehs21w3dcm" path="res://scenes/components/HealthComponent.tscn" id="3_24isx"]
[ext_resource type="PackedScene" uid="uid://lh7tu41mw41a" path="res://scenes/components/BuildingSelectorComponent.tscn" id="3_ji8ep"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ys3s2"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="MainBuilding" type="StaticBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_s4e7a")

[node name="BuildingSelectorComponent" parent="." instance=ExtResource("3_ji8ep")]
position = Vector2(0, -20)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -21)
texture = ExtResource("2_5fydr")

[node name="Position1" type="Node2D" parent="."]
position = Vector2(45, 38)

[node name="Position2" type="Node2D" parent="."]
position = Vector2(-48, 25)

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="HealthComponent" parent="." instance=ExtResource("3_24isx")]
MAX_HEALTH = 20.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-76, -1, -31, -27, 40, -27, 77, 0, 51, 31, -38, 30)

[node name="TimeRemaining" type="ProgressBar" parent="."]
visible = false
offset_left = -47.0
offset_top = -69.0
offset_right = 48.0
offset_bottom = -61.0
theme_override_styles/fill = SubResource("StyleBoxFlat_ys3s2")
show_percentage = false

[node name="GatherPoint" type="Node2D" parent="."]
position = Vector2(0, 28)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
